# dlt_pipelines

./: README.md  pyproject.toml
ingest_data/: utils.py
ingest_data/consum/: pipeline.py  source.py
ingest_data/klaviyo/: pipeline.py  source.py
ingest_data/mercadona/: pipeline.py  source.py
ingest_data/trustpilot/: pipeline.py  source.py
