[project]
name = "dlt_ingest_data"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "dlt[duckdb]>=1.5.0",
    "tqdm>=4.67.1"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.hatch.build.targets.wheel]
packages = ["ingest_data"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
